--- a/customPopUpTutorial-iOS-practice/PopUp.storyboard
+++ b/customPopUpTutorial-iOS-practice/PopUp.storyboard
@@ -71,6 +71,9 @@
                                         <state key="normal" title="Go to Naver">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onGotoBtnNaverClicked:" destination="A6j-dd-zx3" eventType="touchUpInside" id="tbT-C1-S1D"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RyQ-cI-xbl">
                                         <rect key="frame" x="0.0" y="40" width="120" height="30"/>
